feat(KSTIP-1750): cleanup